# py-build-cmake

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Config.md  README.md  noxfile.py  pyproject.toml  pytest.ini
.github/workflows/: docs.yml  pyenv.yml  wheel-windows.yml  wheel.yml
cmake/: Pybind11Stubgen.cmake  QueryPythonForPybind11.cmake
docs/: CLI.md  Components.md  Config.md  Cross-compilation.md  Debug.md  Editable-install.md  FAQ.md  Installation.md  Package-structure.md  README.md  Variables.md  _config.yml  conf.py  index.md
docs/_extra/: CLI.html  Components.html  Config.html  Cross-compilation.html  Debug.html  Editable-install.html  FAQ.html  Installation.html  Package-structure.html  Variables.html
docs/_static/: pypi-icon.js  style.css
docs/examples/: index.rst
docs/getting-started/: first-steps.md  index.rst  installation.md
docs/usage/: cli.md  (+7 more)
examples/: README.md
examples/minimal/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
examples/minimal-debug-component/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
examples/minimal-debug-component/debug/: README.md  pyproject.toml
examples/minimal-debug-component/src/: CMakeLists.txt  Debug.cmake  _add_module.pyi
examples/minimal-debug-component/src-python/minimal_comp/: __init__.py  add_module.py
examples/minimal-debug-component/src/minimal_comp/: __init__.py
examples/minimal-debug-component/test/: test_component.py
examples/minimal-debug-component/tests/: test_add_module.py  test_component.py
examples/minimal-program/: CMakeLists.txt  README.md  pyproject.toml
examples/minimal-program/src/: CMakeLists.txt  minimal_program.cpp
examples/minimal-program/src-python/minimal_program/: __init__.py
examples/minimal-program/src-python/minimal_program_module/: __init__.py
examples/minimal-program/src/minimal_program_module/: __init__.py
examples/minimal-program/test/: test_minimal_program.py
examples/minimal-program/tests/: test_minimal_program.py
examples/minimal/src/: CMakeLists.txt  add_module.c
examples/minimal/src-python/minimal/: __init__.py  add_module.py
examples/minimal/src/minimal/: __init__.py
examples/minimal/test/: test_add_module.py
examples/minimal/tests/: test_add_module.py
examples/nanobind-project/: CMakeLists.txt  README.md  cross-compile-linux.sh  py-build-cmake.cross.example.toml  pyproject.toml
examples/nanobind-project/cmake/: NanobindStubgen.cmake  Pybind11Stubgen.cmake  QueryPythonForNanobind.cmake  nanobindGuessPythonExtSuffix.cmake
examples/nanobind-project/examples/: add_example.py
examples/nanobind-project/python-src/nanobind_project/: __init__.py  add.py  add_module.py
examples/nanobind-project/src/ext/: add_module.cpp
examples/nanobind-project/src/nanobind_project/: __init__.py
examples/nanobind-project/test/: test_add_module.py
examples/nanobind-project/tests/: test_add_module.py  test_sub_package.py
examples/pybind11-project/: .gitignore  CMakeLists.txt  README.md  aarch64-rpi3-linux-gnu.cmake  cross-compile-linux.sh  py-build-cmake.cross.example.toml  pyproject.toml
examples/pybind11-project/cmake/: Pybind11Stubgen.cmake  QueryPythonForPybind11.cmake
examples/pybind11-project/examples/: add_example.py
examples/pybind11-project/python-src/pybind11_project/: __init__.py  add.py  add_module.py
examples/pybind11-project/python-src/pybind11_project/sub_package/: __init__.py  sub.py
examples/pybind11-project/src/: add_module.cpp
examples/pybind11-project/src/ext/: add_module.cpp
examples/pybind11-project/src/pybind11_project/: __init__.py
examples/pybind11-project/src/pybind11_project/sub_package/: __init__.py
examples/pybind11-project/test/: test_add_module.py
examples/pybind11-project/tests/: test_add_module.py  test_sub_package.py
examples/swig-project/: CMakeLists.txt  README.md  pyproject.toml
examples/swig-project/cmake/: QueryPythonForSWIG.cmake
examples/swig-project/python-src/swig_project/: __init__.py
examples/swig-project/src/: add_module.cpp  add_module.i
examples/swig-project/src/swig_project/: __init__.py
examples/swig-project/tests/: test_add_module.py  test_sub_package.py
py_build_cmake/: __init__.py  add_module.py  build.py  py_build_cmake.py
scripts/: download-cross-toolchains-linux.sh  list_contents.py
src/: add_module.cpp
test/: test_add_module.py  test_config.py  test_configoptions.py  test_newconfig.py  test_sub_package.py
test-packages/bare-c-module/: CMakeLists.txt  README.md  add_module.c  pyproject.toml
test-packages/bare-c-module/tests/: test_add_module.py
test-packages/cmake-options/: CMakeLists.txt  README.md  pyproject.toml
test-packages/cmake-options/tests/: test_placeholder.py
test-packages/cmake-preset/: CMakeLists.txt  CMakePresets.json  README.md  generate.py  pyproject.toml
test-packages/cmake-preset/tests/: test_generated_module.py
test-packages/empty-config/: README.md  pyproject.toml
test-packages/empty-config/src/empty_config/: __init__.py
test-packages/empty-config/tests/: test_empty.py
test-packages/find-python/: CMakeLists.txt  pyproject.toml
test-packages/find-python-4/: CMakeLists.txt  cross-compile-linux.sh  pyproject.toml
test-packages/local-options/: .gitignore  CMakeLists.txt  README.md  py-build-cmake.local.pbc  py-build-cmake.local.toml  pyproject.toml
test-packages/local-options/tests/: test_placeholder.py
test-packages/namespace-project-a/: CMakeLists.txt  LICENSE  pyproject.toml
test-packages/namespace-project-a/cmake/: Pybind11Stubgen.cmake  QueryPythonForPybind11.cmake  Reproducible.cmake  pybind11GuessPythonExtSuffix.cmake
test-packages/namespace-project-a/python-src/namespace_project/: add_module.py
test-packages/namespace-project-a/tests/: test_add_module.py
test-packages/namespace-project-b/: pyproject.toml
test-packages/namespace-project-b/tests/: test_sub_module.py
tests/: test_cli_override.py  test_config_load.py  test_configoptions.py  test_configoptions_cmake.py  test_configoptions_multi.py  test_environment.py  test_macos_platform_tag.py  test_util.py
(+115 files in other folders)
