[build-system]
requires = ["distlib", "flit_core>=3.7,<4", "tomli>=1.2.3,<3; python_version < '3.11'"]
build-backend = "py_build_cmake.build"
backend-path = ["src"]

[project]
name = "py-build-cmake"
readme = "README.md"
requires-python = ">=3.7"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Pieter P", "email" = "pieter.p.dev@outlook.com" }]
keywords = ["pep517", "cmake"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
dependencies = [
    "distlib~=0.3.5",
    "flit_core>=3.7,<4",
    "tomli>=1.2.3,<3; python_version < '3.11'",
    "click~=8.1.3",
]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/tttapa/py-build-cmake"
Documentation = "https://tttapa.github.io/py-build-cmake"
Tracker = "https://github.com/tttapa/py-build-cmake/issues"

[project.scripts]
py-build-cmake = "py_build_cmake.cli:cli"

[tool.py-build-cmake.module]
name = "py_build_cmake"

[tool.pytest.ini_options]
testpaths = ["test"]
